--- a/style.css
+++ b/style.css
@@ -169,7 +169,33 @@ body {
     box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;
 }
 
+.btn-res{
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 40px;
+    margin-left: 50px;
+
+}
 .btn-box:hover {
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
+}
+
+.btn-res:hover{
     box-shadow: 0 0 5px cyan,
         0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
 }
@@ -190,6 +216,7 @@ body {
 
 .about-text h2 {
     font-size: 60px;
+    margin-top: 37px;
 
 }
 
@@ -294,6 +321,7 @@ body {
     gap: 50px;
     width: 100%;
     max-width: 1200px;
+    margin-top: 37px;
 }
 
 .Technial_bars {
@@ -533,26 +561,243 @@ body {
     margin-top: 10px;
 }
 
+.main-text{
+    padding-top: 50px;
+    margin-top: 50px;
+}
 
+.main-text h2{
+    font-size: 60px;
+    line-height: 1;
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 37px;
+}
 
+.main-text h2 span{
+    
+    color: #0ef;
+}
 
+.protfolio-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(59px, auto));
+    justify-content: space-evenly;
+}
 
+.row{
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer;
+}
 
+.row img{
+    width: 370px;
+    height: 300px;
+    border-radius: 8px;
+    display: block;
+    transition: transform 0.5s;
+}
 
+.layer{
+    width: 100%;
+    height: 0;
+    background-color: #00eeff;
+    position: absolute;
+    border-radius: 8px;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 40px;
+    transition: height 0.5s;
+}
 
+.layer h5{
+    color: #000;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
 
+.layer p{
+    color: #000;
+    font-size: 15px;
+    font-size: 1rem;
+    line-height: 1.8;
+    letter-spacing: 2px;
+}
 
+.row:hover{
+    transform: translateY(-10px) scale(1.05);
+    transition: transform 0.5s, background-color 0.5s, color 0.5s;
+    box-shadow: 0 0 5px cyan,
+    0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan;
+}
 
+.row:hover img{
+    transform: scale(1.1);
+}
 
+.row:hover .layer{
+    height: 100%;
+}
 
+.contact{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 3rem;
+    padding-left: 30px;
+    margin-top: 130px;
+}
 
+.contact-text h2{
+    font-size: 90px;
+    line-height: 1;
+    text-align: center;
+    margin-top: 75px;
+}
 
+.contact-text span{
+    color: #0ef;
+}
 
+.contact-text h4{
+    margin: 15px 0;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 600;
+}
 
+.contact-text p{
+    color: rgb(177, 177, 177);
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 2rem;
+}
 
+.contact-list{
+    margin-bottom: 3rem;
+}
 
+.contact-list li{
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    display: block;
+}
 
+.contact-list i{
+    display: inline-block;
+    color: #0ef;
+    font-size: 30px;
+    font-weight: 600;
+    transition: all .40s ease;
+}
 
+.contact-list li a:hover{
+    transform: scale(1.01) translateY(-5px);
+    color: #0ef;
+}
+
+.contact-icons i{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #0ef;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+    transition: .5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: calc(.2s * var(--i));
+}
+
+.contact-icons i:hover{
+    background: #0ef;
+    color: #000;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.contact-form form{
+    position: relative;
+}
+
+.contact-form form input,form textarea{
+    border: none;
+    outline: none;
+    width: 90%;
+    padding: 18px;
+    background: #555557;
+    color:#ffffff;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+.contact-form textarea{
+    resize: none;
+    height: 220px;
+}
+
+.contact-form form .send{
+    display: inline-block;
+    padding: 14px 60px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;
+}
+
+.contact-form form .send:hover{
+    box-shadow: 0 0 5px cyan,
+    0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
+}
+
+.last-text p{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: rgb(7, 85, 91);
+    font-weight: 300;
+    margin-top: 70px;
+}
+
+.top{
+    position: fixed;
+    bottom: 2.1rem;
+    right: 2.1rem;
+}
+
+.top i{
+    color: #000;
+    background: #0ef;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 0.5rem;
+}
 
 @media (max-width: 768px) {
     .about {
